# code

./: .gitignore  README.md
CppExercises/InterviewQuestions/ChessboardPaths/: README.md
CppExercises/InterviewQuestions/SearchSortedRotated/: README.md  search_sorted_rotated.cpp
cpp_exercises/InterviewQuestions/ChessboardPaths/: chessboard_paths.cpp
cpp_exercises/hello_world/: main.cpp
cpp_exercises/interview_questions/SearchSortedRotated/: README.md
cpp_exercises/interview_questions/max_binary_tree/: README.md  max_elem_tree.cpp  node.hpp
cpp_exercises/interview_questions/n_queens_chessboard/: README.md  n_queens.cpp
cpp_exercises/interview_questions/pi_mcl_estimation/: README.md  pi_estimation.cpp
cpp_exercises/interview_questions/search_sorted_rotated/: search_func.hpp
thread_barrier/: CMakeLists.txt  README.md  main.cpp
thread_barrier/include/: thread_barrier.h
thread_barrier/src/: thread_barrier.cpp
